--- a/src/pages/Page3/App.scss
+++ b/src/pages/Page3/App.scss
@@ -1,19 +1,25 @@
 .Page-Componentes2{
     width: 100%;
     height: 100vh;
-    border: solid red 1px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    .PC-Div{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 25%;
+        height: 90%;
+    }
 }
 .Componente-2{
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 0px 0px 14px 1px #ADADAD40;
-    width: 25%;
-    height: 30%;
+    width: 100%;
+    height: 40%;
     h1{
         color: #646464;
         font-weight: 500;
@@ -27,12 +33,18 @@
         img{
             padding: 1em;
         }
+        h1{
+            font-size: 1.8em;
+        }
     }
     .Comp2-Div-Text{
         display: flex;
         width: 15vw;
         h1{
-            font-size: 1.2em;
+            font-size: 1.1em;
+        }
+        .c2-p-1{
+            margin-left: 4.5em;
         }
         p{
             margin-left: 1em;
@@ -44,8 +56,8 @@
         border-radius: .2em;
         color: #fff;
         font-size: 1em;
-        font-weight: 500;
-        padding: .5em 1em;
+        font-weight: 600;
+        padding: .5em 2.2em;
         margin-right: 7.5vw;
     }
 }
